Style- fix spacing issues in cards

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1696,15 +1696,10 @@ p.card-text {
 ****************************************************************************************/
 #pricing-section {
   background-color: var(--cc-white-off);
-  /* background-image: linear-gradient(
-    to right bottom,
-    var(--cc-bg-distinct-lighter),
-    var(--cc-bg-primary-lighter)
-  ); */
   background-image: linear-gradient(
     to right,
     var(--cc-white-sugar) 200px,
-    var(--cc-bg-primary-lighter) 1200px,
+    var(--cc-bg-primary-lighter) 900px,
     var(--cc-white-sugar)
   );
 }
@@ -1780,4 +1775,8 @@ small {
 
 .list-group li span {
   flex: 4;
+}
+
+.list-group span {
+  text-transform: capitalize;
 }
